--- a/github-markdown.css
+++ b/github-markdown.css
@@ -172,6 +172,13 @@
   overflow: visible;
 }
 
+.markdown-body button:-moz-focusring,
+.markdown-body [type="button"]:-moz-focusring,
+.markdown-body [type="reset"]:-moz-focusring,
+.markdown-body [type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
 .markdown-body [type="checkbox"] {
   box-sizing: border-box;
   padding: 0;
@@ -321,6 +328,10 @@
 .markdown-body input {
   -webkit-font-feature-settings: "liga" 0;
   font-feature-settings: "liga" 0;
+}
+
+.markdown-body .form-select::-ms-expand {
+  opacity: 0;
 }
 
 .markdown-body::before {
@@ -517,6 +528,8 @@
   display: block;
   width: 100%;
   overflow: auto;
+  word-break: normal;
+  word-break: keep-all;
 }
 
 .markdown-body table th {
