--- a/packages/coinstac-ui/app/render/styles/app.scss
+++ b/packages/coinstac-ui/app/render/styles/app.scss
@@ -2,6 +2,7 @@ $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 
 @import "~bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 @import "./alert";
+@import "./back-button";
 @import "./computation-field";
 @import "./computation-select";
 @import "./consortium-card";
